[tool.poetry]
name = "nestor-qt"
version = "0.2.0"
description = "Legacy (Qt5) GUI for the Nestor annotation tool"
authors = ["tbsexton <thurston.sexton@nist.gov>",
           "saschaMoccozet"]

include = ["*.md", "*.rst", "*.ui",
           "nestor_qt/*"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "License :: Public Domain"
]
keywords = [ "nlp", "smart", "manufacturing", "maintenance", "tag", "app" ]
homepage = "https://www.nist.gov/services-resources/software/nestor"
repository = "https://github.com/usnistgov/nestor-qt"

packages = [
    { include = "nestor_qt" },
]

[tool.poetry.dependencies]
python               = "^3.8"
pyqt5                = "^5.15.0"
chardet              = "^3.0.4"
# nestor               = "~0.4.0"
# documentation stuff
sphinx               = { version = "^3.2.1", optional= true }
sphinx_rtd_theme     = { version = "^0.5.0", optional= true }
sphinxcontrib-bibtex = { version = "^1.0.0", optional= true }
numpydoc             = { version = "^1.1.0", optional= true }
m2r                  = { version = "^0.2.1", optional= true }
nbsphinx             = { version = "^0.7.1", optional= true }

[tool.poetry.dev-dependencies]
nestor = { path = "../nestor/dist/nestor-0.4.0.tar.gz", develop = true }
# packaging stuff
taskipy = "^1.2.1"
black = "^19.10b0"
ipykernel = "^5.2.1"
poetry-dynamic-versioning = "^0.8.3"
briefcase = "^0.3.3"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "numpydoc",
    "m2r",
    "nbsphinx"
]

[tool.poetry.scripts]
nestor-qt = 'nestor_qt:main'

[tool.taskipy.tasks]
format = "task format_code && task format_docs"
format_code = "black nestor_qt/*.py"
format_docs = "black README.md && black docs/*.md"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# Briefcase app packaging
[tool.briefcase]
project_name = "Nestor Qt"
bundle = "gov.nist"
version = "0.0.1"
url = "https://www.nist.gov/services-resources/software/nestor"
license = "Other"
author = 'Thurston Sexton'
author_email = "tbs4@nist.gov"

[tool.briefcase.app.nestor-qt]
formal_name = "Nestor Qt"
description = "Legacy (Qt5) GUI for the Nestor annotation tool"
icon = "src/nestor_qt/resources/nestor-qt"
sources = ['src/nestor_qt']
requires = []


[tool.briefcase.app.nestor-qt.macOS]
requires = []

[tool.briefcase.app.nestor-qt.linux]
requires = []
system_requires = []

[tool.briefcase.app.nestor-qt.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.nestor-qt.iOS]
requires = []

[tool.briefcase.app.nestor-qt.android]
requires = []
