[tool.poetry]
name = "nestor-qt"
version = "0.0.0"
description = "Legacy (Qt5) GUI for the Nestor annotation tool"
authors = ["Rachael Sexton <rtbs@nist.gov>",
           "saschaMoccozet"]

include = ["*.md", "*.rst", "*.ui", "*.yaml"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "License :: Public Domain"
]
keywords = [ "nlp", "smart", "manufacturing", "maintenance", "tag", "app" ]
homepage = "https://www.nist.gov/services-resources/software/nestor"
repository = "https://github.com/usnistgov/nestor-qt"

packages = [
    { include = "nestor_qt" },
]

[tool.poetry.scripts]
nestor-qt = 'nestor_qt.app:main'

[tool.poetry.dependencies]
python               = ">=3.8,<3.10"
chardet              = "^3.0.4"
pyaml = "^20.4.0"
# nestor               = "~0.4.0"
# documentation stuff
# sphinx               = { version = "^3.2.1", optional= true }
# sphinx_rtd_theme     = { version = "^0.5.0", optional= true }
# sphinxcontrib-bibtex = { version = "^1.0.0", optional= true }
# numpydoc             = { version = "^1.1.0", optional= true }
# m2r                  = { version = "^0.2.1", optional= true }
# nbsphinx             = { version = "^0.7.1", optional= true }
# nist-nestor = "^0.4.3"
seaborn = "^0.11.0"
pyqt5-qt5 = "5.15.2"
pyqt5 = "^5.15.10"
pandas = "<2"
nist-nestor = "^0.5.0"

[tool.poetry.dev-dependencies]
# nestor = { path = "../nestor/dist/nestor-0.4.0.tar.gz", develop = true }
# packaging stuff
taskipy = "^1.2.1"
black = "^19.10b0"
# ipykernel = "^5.2.1"
# briefcase = "^0.3.3"
# pyinstaller = "^4.0"
# pyinstaller-hooks-contrib = "^2020.8"

# [tool.poetry.extras]
# docs = [
#     "sphinx",
#     "sphinx_rtd_theme",
#     "sphinxcontrib-bibtex",
#     "numpydoc",
#     "m2r",
#     "nbsphinx"
# ]


[tool.taskipy.tasks]
format = "task format_code && task format_docs"
format_code = "black nestor_qt/*.py"
format_docs = "black README.md && black docs/*.md"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]


# Briefcase app packaging
[tool.briefcase]
project_name = "Nestor Qt"
bundle = "gov.nist"
version = "0.3.0"
url = "https://www.nist.gov/services-resources/software/nestor"
license = "Other"
author = 'Rachael Sexton'
author_email = "tbs4@nist.gov"

[tool.briefcase.app.nestor-qt]
formal_name = "Nestor Qt"
description = "Legacy (Qt5) GUI for the Nestor annotation tool"
icon = "nestor_qt/resources/nestor-qt"
sources = ['nestor_qt']
requires = []

[tool.briefcase.app.nestor-qt.macOS]
requires = []

[tool.briefcase.app.nestor-qt.linux]
requires = [
    'nist-nestor>=0.4.3',
    'pyqt5>=5.15.0',
    'chardet>=3.0.4',
    'pyaml>=20.4.0'
]
system_requires = [
    "python3-pyqt5",
    "python3-pyqt5.qtopengl",
    "python3-pyqt5.qtquick",
    'libglu1-mesa-dev',
    'libpulse-dev',
    'libasound2',
    'libqt5gui5',
    'qt5-default',
    'libgirepository1.0-dev',
    'libcairo2-dev'
]

[tool.briefcase.app.nestor-qt.windows]
requires = [
    'nist-nestor>=0.4.3',
    'pyqt5>=5.15.0',
    'chardet>=3.0.4',
    'pyaml>=20.4.0'
]


# Mobile deployments
[tool.briefcase.app.nestor-qt.iOS]
requires = []

[tool.briefcase.app.nestor-qt.android]
requires = []


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
